Add modal window feedback

--- a/catalog.html
+++ b/catalog.html
@@ -93,7 +93,7 @@
                         </legend>
                         <ul>
                             <li class="filter-option">
-                                <input class="visually-hidden filter-input filter-input-range" type="range" min="0" max="10000">
+                                <input class="visually-hidden filter-input filter-input-range" type="range" name="value-count" min="0" max="10000" step="1">
                             </li>
                         </ul>
                     </fieldset>
