Changed small defects

--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,9 @@
                 </ul>
                 <ul class="user-navigation">
                     <li class="search">
-                        <input type="search" placeholder="Поиск по сайту">
+                        <form>
+                            <input type="search" name="search" placeholder="Поиск по сайту">
+                        </form>    
                     </li>
                     <li class="login-link">
                         <a href="#">
