--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <ul class="user-navigation">
                     <li class="search">
                         <form>
-                            <input type="search" placeholder="Поиск по сайту">
+                            <input type="search" name="search" placeholder="Поиск по сайту">
                         </form>    
                     </li>
                     <li class="login-link">
@@ -71,7 +71,7 @@
                 <h2 class="visually-hidden">
                     Лучший товар
                 </h2>
-                <a class="first-slider">
+                <a class="selfie-stick-slide">
                     <img src="img/selfie-branch.png" width="384" height="486" alt="Селфи-палка">
                 </a>
                 <b>
@@ -82,7 +82,7 @@
                     Самая длинная палка для селфи доступна в нашем магазине.
                     Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
                 </p>
-                <a class="button" href="more-selfie.html">
+                <a class="button button-stick-slide" href="more-selfie.html">
                     Подробнее
                 </a>
                 <table class="features">
@@ -266,19 +266,19 @@
             <section class="pagination-helper-slider">
                 <ul class="help-list">
                     <li class="pagination-helper pagination-helper-current">
-                        <span class="button button-delivery">
+                        <button class="button button-delivery">
                             Доставка
-                        </span>
+                        </button>
                     </li>
                     <li class="pagination-helper">
-                        <span class="button button-warranty">
+                        <button class="button button-warranty">
                             Гарантия
-                        </span>
+                        </button>
                     </li>
                     <li class="pagination-helper">
-                        <span class="button button-credit">
+                        <button class="button button-credit">
                             Кредит
-                        </span>
+                        </button>
                     </li>
                 </ul>    
                     <div class="text">
@@ -389,7 +389,6 @@
                             х
                         </button>
                     </section>
-
             </section>
 
             <footer class="main-footer">
