Changed span to div in logo for index page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
         <header class="main-header">
             <nav class="main-navigation">
-                <span class="main-header-logo">
+                <div class="main-header-logo">
                     Device
-                </span>
+                </div>
                 <ul>
                     <li>
                         <a href="catalog.html">
@@ -396,9 +396,9 @@
 
             <footer class="main-footer">
                 <div>
-                    <span class="main-footer-logo">
+                    <div class="main-footer-logo">
                         Device
-                    </span>
+                    </div>
                     <p>
                         г. Москва, ул. Строителей, 15
                     </p>    
