Changed div to a in logo for index page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
         <header class="main-header">
             <nav class="main-navigation">
-                <div class="main-header-logo">
+                <a class="main-header-logo">
                     Device
-                </div>
+                </a>
                 <ul>
                     <li>
                         <a href="catalog.html">
@@ -396,9 +396,9 @@
 
             <footer class="main-footer">
                 <div>
-                    <div class="main-footer-logo">
+                    <a class="main-footer-logo">
                         Device
-                    </div>
+                    </a>
                     <p>
                         г. Москва, ул. Строителей, 15
                     </p>    
