--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <title>
             HTML Academy: Девайс
         </title>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
 
         <header class="main-header">
             <nav class="main-navigation">
-                <a class="main-header-logo">
+                <a class="main-logo main-header-logo">
                     Device
                 </a>
                 <ul>
@@ -393,7 +395,7 @@
 
             <footer class="main-footer">
                 <div>
-                    <a class="main-footer-logo">
+                    <a class="main-logo main-footer-logo">
                         Device
                     </a>
                     <p>
