--- a/catalog.html
+++ b/catalog.html
@@ -5,12 +5,14 @@
         <title>
             «Device» Каталог
         </title>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
 
         <header class="main-header">
             <nav class="main-navigation">
-                <a class="main-header-logo" href="index.html">
+                <a class="main-logo main-header-logo" href="index.html">
                     Device
                 </a>
                 <ul>
@@ -277,7 +279,7 @@
 
         <footer class="main-footer">
             <div>
-                <a class="main-footer-logo" href="index.html">
+                <a class="main-logo main-footer-logo" href="index.html">
                     Device
                 </a>
                  <p>
