Change class for navigation. Add style for header main navigation

--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
                 <a class="main-logo main-header-logo" href="index.html">
                     Device
                 </a>
-                <ul>
+                <ul class="page-navigation">
                     <li>
                         <a href="catalog.html">
                             Каталог товаров
