--- a/catalog.html
+++ b/catalog.html
@@ -305,7 +305,7 @@
                     </li>
                 </ul>
                 <ul class="user-navigation">
-                    <li class="login-link">\
+                    <li class="login-link">
                         <a href="#">
                             Войти
                         </a>                            
