Add style for footer

--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
                 <a class="main-logo main-header-logo" href="index.html">
                     Device
                 </a>
-                <ul class="page-navigation">
+                <ul class="header-page-navigation">
                     <li>
                         <a href="catalog.html">
                             Каталог товаров
@@ -287,7 +287,7 @@
                 </p>    
             </div>
             <nav class="footer-navigation">
-                <ul>
+                <ul class="footer-page-navigation">
                     <li>
                         <a href="delivery.html">
                             Доставка
