Add style for logo partners, add style for form

--- a/index.html
+++ b/index.html
@@ -349,6 +349,9 @@
                         Заодно, вы сможете поверить работоспособность покупки. Всякое бывает
                     </p>
                 </div>
+                <a class="button" href="#">
+                    Напишите нам
+                </a>
 
                     <section class="modal modal-map">
                         <h2 class="visually-hidden">
