Add style for delivery companies in about-us

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                         DEVICE работает со многими транспортными компаниям.
                     </p>
                 </div>  
-                <ul>
+                <ul class="delivery-companies">
                     <li>
                         Деловые Линии
                     </li>
