Add fonts "gilroq light", started to style main container for catalog page.

--- a/catalog.html
+++ b/catalog.html
@@ -80,7 +80,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="breadcrumbs-current">
+                    <a href="breadcrumbs-current.html">
                         Моноподы для селфи
                     </a>
                 </li>
