add style for sort and filters

--- a/catalog.html
+++ b/catalog.html
@@ -168,17 +168,17 @@
                     Сортировка:
                 </h2>
             <ul>
-                <li>
+                <li class="sort-item">
                     <a href="#">
                         По цене
                     </a>
                 </li>
-                <li>
+                <li class="sort-item">
                     <a href="#">
                         По типу
                     </a>
                 </li>
-                <li>
+                <li class="sort-item">
                     <a href="#">
                         По популярности
                     </a>
