--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     Выбор товара 
                 </h2>
                 <ul class="item-list">
-                    <li>
+                    <li class="preview-item">
                         <a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" width="97" height="55" viewBox="0 0 97 55">
                                 <g>
@@ -131,7 +131,7 @@
                             </p>
                         </a>    
                     </li>
-                    <li>  
+                    <li class="preview-item">  
                         <a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" width="86" height="117" viewBox="0 0 86 117">
                                 <g>
@@ -143,7 +143,7 @@
                             </p>
                         </a>    
                     </li>
-                    <li>    
+                    <li class="preview-item">    
                         <a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" width="71" height="87" viewBox="0 0 71 87">
                                 <g>
@@ -161,7 +161,7 @@
                             </p>
                         </a>
                     </li>
-                    <li>     
+                    <li class="preview-item">     
                         <a href="#">
                             <svg  version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="107px" height="65px" viewBox="0 0 107 65" enable-background="new 0 0 107 65" xml:space="preserve">
 	                            <path d="M98.967,4.074c0.752,1.441,1.209,3.08,1.209,4.818v21.102c0,4.616-3.092,8.527-7.246,9.9
@@ -237,7 +237,7 @@
                             </p>                            
                         </a>
                     </li>
-                    <li>   
+                    <li class="preview-item">   
                         <a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" width="56" height="98" viewBox="0 0 56 98">
                                 <g>
@@ -249,7 +249,7 @@
                             </p>
                         </a>
                     </li>
-                    <li> 
+                    <li class="preview-item"> 
                         <a href="#">
                             <svg xmlns="http://www.w3.org/2000/svg" width="132" height="69" viewBox="0 0 132 69">
                                 <g>
