Changed img logos of partners, add style for logos

--- a/index.html
+++ b/index.html
@@ -296,16 +296,16 @@
 
             <div class="logo-companies">
                 <a class="logo-item" href="#">
-                    <img src="img/logo-dji.png" width="260" height="100" alt="Логотип DJI">
+                    <img src="img/logo-dji-color.png" width="260" height="100" alt="Логотип DJI">
                 </a>    
                 <a class="logo-item" href="#">
-                    <img src="img/logo-sp.png" width="260" height="100" alt="Логотип SPGadgets">
+                    <img src="img/logo-sp-color.png" width="260" height="100" alt="Логотип SPGadgets">
                 </a>
                 <a class="logo-item" href="#">    
-                    <img src="img/gopro.png" width="260" height="100" alt="Логотип GoPro">
+                    <img src="img/gopro-color.png" width="260" height="100" alt="Логотип GoPro">
                 </a>    
                 <a class="logo-item" href="#">
-                    <img src="img/vive.png" width="260" height="100" alt="Логотип VIVE">
+                    <img src="img/logo-vive-color.png" width="260" height="100" alt="Логотип VIVE">
                 </a>    
             </div>
 
