--- a/catalog.html
+++ b/catalog.html
@@ -304,14 +304,14 @@
                         </a>
                     </li>
                 </ul>
-                <ul class="user-navigation">
+                <ul class="user-navigation footer-user-navigation">
                     <li class="login-link">
                         <a href="#">
                             Войти
                         </a>                            
                     </li>
                 </ul>
-                <ul class="buy">    
+                <ul class="buy footer-buy">    
                     <li class="compare">
                         <a href="#">
                             Сравнить
