Fix main slider of best items

--- a/index.html
+++ b/index.html
@@ -73,44 +73,48 @@
                     <h2 class="visually-hidden">
                         Лучший товар
                     </h2>
-                    <a class="selfie-stick-slide">
-                        <img src="img/selfie-branch.png" width="384" height="486" alt="Селфи-палка">
-                    </a>
-                    <b>
-                        Делай селфи,<br>
-                        как Бен Стиллер!
-                    </b>
-                    <p>
-                        Самая длинная палка для селфи доступна в нашем магазине.
-                        Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
-                    </p>
-                    <a class="button button-stick-slide" href="more-selfie.html">
-                        Подробнее
-                    </a>
-                    <table class="features">
-                        <tr>
-                            <td>
-                                8,5 м
-                            </td>
-                            <td>
-                                5кг
-                            </td>                     
-                            <td>
-                                Карбон
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Длина палки
-                            </td>
-                            <td>
-                                Вес палки
-                            </td>
-                            <td>
-                                Материал
-                            </td>
-                        </tr>
-                    </table>
+                    <div class="container-best-slider">
+                        <a class="selfie-stick-slide">
+                            <img src="img/selfie-branch.png" width="384" height="486" alt="Селфи-палка">
+                        </a>
+                        <div class="best-slider-description">
+                            <b>
+                                Делай селфи,<br>
+                                как Бен Стиллер!
+                            </b>
+                            <p>
+                                Самая длинная палка для селфи доступна в нашем магазине.
+                                Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+                            </p>
+                            <a class="button button-stick-slide" href="more-selfie.html">
+                                Подробнее
+                            </a>
+                            <table class="features">
+                                <tr>
+                                    <td>
+                                        8,5 м
+                                    </td>
+                                    <td>
+                                        5кг
+                                    </td>                     
+                                    <td>
+                                        Карбон
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Длина палки
+                                    </td>
+                                    <td>
+                                        Вес палки
+                                    </td>
+                                    <td>
+                                        Материал
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>    
+                    </div>
                 </section>
 
                 <section class="items">
