Create the almost finally edition of main slider without switching to other sliders

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <img src="img/selfie-branch.png" width="384" height="486" alt="Селфи-палка">
                         </a>
                         <div class="best-slider-description">
-                            <b>
+                            <b class="caption-slider">
                                 Делай селфи,<br>
                                 как Бен Стиллер!
                             </b>
@@ -95,7 +95,7 @@
                                         8,5 м
                                     </td>
                                     <td>
-                                        5кг
+                                        5 кг
                                     </td>                     
                                     <td>
                                         Карбон
