Add other sliders without interactivity

--- a/index.html
+++ b/index.html
@@ -115,8 +115,74 @@
                             </table>
                         </div>    
                     </div>
+                    <div class="container-best-slider container-best-slider-bracelet">
+                        <a class="fitness-bracellet-slide">
+                            <img src="img/fitness-bracelet-slider.png" width="345" height="485" alt="Фитнес-браслет, который напоминает о тренировках">
+                        </a>
+                        <div class="best-slider-description best-slider-description-bracelet">
+                            <b class="caption-slider">
+                                Худеем<br>
+                                правильно!
+                            </b>
+                            <p>
+                                Мотивирующие фитнес-браслеты помогут найти в себе силы
+                                не пропускать занятия и соблюдать диету.
+                            </p>
+                            <a class="button button-bracelet-slide" href="more-selfie.html">
+                                Подробнее
+                            </a>
+                            <table class="features">
+                                <tr>
+                                    <td>
+                                        48 часов
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        без подзарядки
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>    
+                    </div>
+                    <div class="container-best-slider container-best-slider-quadrupter">
+                        <a class="quadrupter-slide">
+                            <img src="img/quadrupter-slider.png" width="526" height="334" alt="Квадрокоптер с лазерным прицелом">
+                        </a>
+                        <div class="best-slider-description best-slider-description-quadrupter">
+                            <b class="caption-slider">
+                                Порхает как бабочка,<br>
+                                жалит как пчела!
+                            </b>
+                            <p>
+                                Этот обычный, на первый взгляд, квадрокоптер оснащен
+                                мощным лазером, замаскированным под стандартную камеру.
+                            </p>
+                            <a class="button button-quadrupter-slide" href="more-selfie.html">
+                                Подробнее
+                            </a>
+                            <table class="features features-quadrupter">
+                                <tr>
+                                    <td>
+                                        800 м
+                                    </td>
+                                    <td>
+                                        50 м
+                                    </td>  
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Дальность полета
+                                    </td>
+                                    <td>
+                                        Радиус поражения
+                                    </td>                                   
+                                </tr>
+                            </table>
+                        </div>    
+                    </div>
                 </section>
-
+                
                 <section class="items">
                     <h2 class="visually-hidden">
                         Выбор товара 
