--- a/catalog.html
+++ b/catalog.html
@@ -283,8 +283,8 @@
 
         <footer class="main-footer">
             <div class="wrapper">
-                <div>
-                    <a class="main-logo main-footer-logo" href="index.html">
+                <div class="footer-logo-address">
+                    <a class="main-logo main-footer-logo">
                         Device
                     </a>
                     <p>
@@ -292,81 +292,87 @@
                     </p>    
                 </div>
                 <nav class="footer-navigation">
-                    <ul class="footer-page-navigation">
-                        <li>
-                            <a href="delivery.html">
-                                Доставка
-                            </a>
-                        </li>
-                        <li>
-                            <a href="warranty.html">
-                                Гарантия
-                            </a>
-                        </li>
-                        <li>
-                            <a href="contacts.html">
-                                Контакты
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="user-navigation footer-user-navigation">
-                        <li class="login-link">
-                            <a href="#">
-                                Войти
-                            </a>                            
-                        </li>
-                    </ul>
-                    <ul class="buy footer-buy">    
-                        <li class="compare">
-                            <a href="#">
-                                Сравнить
-                            </a>
-                        </li>
-                        <li class="basket">
-                            <a href="#">
-                                Корзина
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="footer-social">
-                        <li>
-                            <a class="social-button facebook" href="https://www.facebook.com/htmlacademy">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                                    <path d="M16 0C7.164 0 0 7.163 0 16s7.164 16 16 16c8.837 0 16-7.164 16-16S24.837 0 16 0zm4.062 9.455h-3.021v3.444h3.021v3.445h-3.021v8.61H14.02v-8.61H11v-3.445h3.021V9.455c0-1.902 1.353-3.445 3.021-3.445h3.021v3.445z"/>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="social-button instagram" href="https://www.instagram.com/htmlacademy/">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                                    <g>
-                                        <path d="M20.916 16a4.938 4.938 0 1 1-9.877 0c0-.394.051-.773.138-1.14h-.897v6.838h11.396V14.86h-.897c.086.367.137.746.137 1.14z"/>
-                                        <path d="M15.978 18.659c1.466 0 2.659-1.193 2.659-2.659s-1.193-2.659-2.659-2.659c-1.466 0-2.659 1.193-2.659 2.659s1.192 2.659 2.659 2.659zM18.637 10.302h3.039v3.039h-3.039z"/>
-                                        <path d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.955 21.698a2.285 2.285 0 0 1-2.279 2.279H10.279A2.285 2.285 0 0 1 8 21.698V10.302a2.286 2.286 0 0 1 2.279-2.279h11.396a2.286 2.286 0 0 1 2.279 2.279v11.396z"/>
-                                    </g>
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="social-button twitter" href="https://twitter.com/htmlacademy_ru">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                                    <path d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.944 12.809c-.251 6.516-3.463 10.832-10.992 10.702h-.486c-.447 0-4.543-.443-5.344-1.823 2.479.19 4.247-.406 5.12-1.136-1.048-.289-2.923-.461-3.251-2.848.384.104.618.221 1.299.113-1.307-.824-2.758-1.519-2.679-3.643.311.317 1.164.518 1.46.457-.768-.233-2.149-3.244-.974-4.781 1.984 1.79 4.075 3.482 7.804 3.643.227-2.214 1.24-3.699 3.168-4.325 1.84-.479 3.255.26 3.901 1.138.737-.224 1.453-.466 2.193-.685-.004.833-.569 1.463-.935 1.709.747.165 1.423-.475 1.423-.475-.184.963-1.094 1.725-1.707 1.954z"/>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>    
+                    <div class="wrapper-footer-navigation">
+                        <ul class="footer-page-navigation">
+                            <li>
+                                <a href="delivery.html">
+                                    Доставка
+                                </a>
+                            </li>
+                            <li>
+                                <a href="warranty.html">
+                                    Гарантия
+                                </a>
+                            </li>
+                            <li>
+                                <a href="contacts.html">
+                                    Контакты
+                                </a>
+                            </li>
+                        </ul>
+                        <ul class="footer-social">
+                            <li>
+                                <a class="social-button facebook" href="https://www.facebook.com/htmlacademy">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                        <path d="M16 0C7.164 0 0 7.163 0 16s7.164 16 16 16c8.837 0 16-7.164 16-16S24.837 0 16 0zm4.062 9.455h-3.021v3.444h3.021v3.445h-3.021v8.61H14.02v-8.61H11v-3.445h3.021V9.455c0-1.902 1.353-3.445 3.021-3.445h3.021v3.445z"/>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="social-button instagram" href="https://www.instagram.com/htmlacademy/">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                        <g>
+                                            <path d="M20.916 16a4.938 4.938 0 1 1-9.877 0c0-.394.051-.773.138-1.14h-.897v6.838h11.396V14.86h-.897c.086.367.137.746.137 1.14z"/>
+                                            <path d="M15.978 18.659c1.466 0 2.659-1.193 2.659-2.659s-1.193-2.659-2.659-2.659c-1.466 0-2.659 1.193-2.659 2.659s1.192 2.659 2.659 2.659zM18.637 10.302h3.039v3.039h-3.039z"/>
+                                            <path d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.955 21.698a2.285 2.285 0 0 1-2.279 2.279H10.279A2.285 2.285 0 0 1 8 21.698V10.302a2.286 2.286 0 0 1 2.279-2.279h11.396a2.286 2.286 0 0 1 2.279 2.279v11.396z"/>
+                                        </g>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="social-button twitter" href="https://twitter.com/htmlacademy_ru">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                        <path d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.944 12.809c-.251 6.516-3.463 10.832-10.992 10.702h-.486c-.447 0-4.543-.443-5.344-1.823 2.479.19 4.247-.406 5.12-1.136-1.048-.289-2.923-.461-3.251-2.848.384.104.618.221 1.299.113-1.307-.824-2.758-1.519-2.679-3.643.311.317 1.164.518 1.46.457-.768-.233-2.149-3.244-.974-4.781 1.984 1.79 4.075 3.482 7.804 3.643.227-2.214 1.24-3.699 3.168-4.325 1.84-.479 3.255.26 3.901 1.138.737-.224 1.453-.466 2.193-.685-.004.833-.569 1.463-.935 1.709.747.165 1.423-.475 1.423-.475-.184.963-1.094 1.725-1.707 1.954z"/>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>    
+                    <div class="user-link">
+                        <ul class="user-navigation">
+                            <li class="login-link">
+                                <a href="#">
+                                    Войти
+                                </a>
+                            </li>
+                        </ul>
+                        <ul class="buy">    
+                            <li class="compare">
+                                <a href="#">
+                                    Сравнить
+                                </a>
+                            </li>
+                            <li class="basket">
+                                <a href="#">
+                                    Корзина
+                                </a>
+                            </li>
+                        </ul>
+                    </div>   
                 </nav>
-                <p class="phone">
-                    Тел. +7 (495) 495-95-95
-                </p>
-                <div class="logo-html">
-                    <a href="https://htmlacademy.ru/intensive/htmlcss">
-                        <svg width="26.943px" height="34.09px">
-                            <path d="M13.62,0.017L13.472,0L0,1.412v24.661l13.473,8.017l13.43-7.99l0.042-0.025V1.412L13.62,0.017z M25.019,12.127L13.495,5.334 L13.494,5.23l-0.087,0.05l-0.088-0.056v0.109L1.925,12.118V3.147l11.548-1.212l11.547,1.212V12.127z M13.405,6.787L24.923,13.5 l-4.479,2.64l-7.093-4.221l-0.014,1.415l5.904,3.513l-0.86,0.507l-5.03-2.992l-0.014,1.415l3.827,2.275l-0.782,0.523l-3.031-1.787 l-0.014,1.413l1.853,1.091l-1.8,1.081L2.034,13.622L13.405,6.787z M1.925,15.127l11.411,6.791l0.016,1.044L5.41,18.234L5.395,19.65 l7.979,4.795l0.018,1.076l-7.973-4.74l-0.013,1.414l8.021,4.822l0.046,0.025l8.143-4.872l-0.011-5.177l3.415-2.036v10.021 L13.472,31.85L1.925,24.979V15.127z"/>
-                        </svg>
-                    </a>    
-                </div>
-            </div>
+                <div class="wrapper-phone-logo">
+                    <p class="phone">
+                        Тел. +7 (495) 495-95-95
+                    </p>
+                    <div class="logo-html">
+                        <a href="https://htmlacademy.ru/intensive/htmlcss">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="26.943" height="34.09" viewBox="0 0 26.943 34.09">
+                                <path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/>
+                            </svg>
+                        </a>    
+                    </div>
+                </div>    
+            </div>            
         </footer>                
     </body>
 </html>
