Almost create main-container of catalog-page

--- a/catalog.html
+++ b/catalog.html
@@ -85,6 +85,7 @@
                         </a>
                     </li>
                 </ul>  
+        </div>      
 
             <div class="container-catalog-filter">    
 
@@ -194,56 +195,56 @@
                     </h2>
                     <ul class="catalog-list">
                         <li class="catalog-item">
-                            <h3>
-                                <a href="catalog-item.html">
-                                    Любительская селфи-палка
-                                </a>
-                            </h3>                        
-                                <a href="catalog-item-image">
-                                    <img src="img/selfie-hand.png" width="360" height="380" alt="Любительская селфи-палка">
-                                </a>                        
-                            <p class="catalog-item-price">
-                                500 руб.
-                            </p>
+                            <a href="#">                                
+                                <img src="img/follow-me.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                                <div class="catalog-item-option">
+                                    <h3>                                    
+                                        Любительская селфи-палка                                    
+                                    </h3>
+                                    <p class="catalog-item-price">
+                                        500 руб.
+                                    </p>
+                                </div>
+                            </a>    
                         </li>
                         <li class="catalog-item">
-                            <h3>
-                                <a href="catalog-item.html">
-                                    Профессиональная селфи-палка
-                                </a>
-                            </h3>                      
-                                <a href="catalog-item-image">
-                                    <img src="img/professional-stick.png" width="360" height="380" alt="Профессиональная селфи-палка">
-                                </a>                        
-                            <p class="catalog-item-price">
-                                1 500 руб.
-                            </p>
+                            <a href="#">                                                    
+                                <img src="img/not-drowned-stick.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+                                <div class="catalog-item-option">
+                                    <h3>
+                                        Профессиональная селфи&#8209;палка
+                                    </h3>  
+                                    <p class="catalog-item-price">
+                                        1 500 руб.
+                                    </p>
+                                </div>
+                            </a>
                         </li>
                         <li class="catalog-item">
-                            <h3>
-                                <a href="catalog-item.html">
-                                    Непотопляемая селфи-палка
-                                </a>
-                            </h3>                        
-                                <a href="catalog-item-image" >
-                                    <img src="img/not-drowned-stick.png" width="360" height="380" alt="Непотопляемая селфи-палка">
-                                </a>                        
-                            <p class="catalog-item-price">
-                                2 500 руб.
-                            </p>
+                            <a href="#">                             
+                                <img src="img/professional-stick.jpg" width="360" height="380" alt="Непотопляемая селфи-палка"> 
+                                <div class="catalog-item-option">
+                                    <h3>                                
+                                        Непотопляемая&nbsp;селфи&#8209;палка
+                                    </h3>                                                     
+                                    <p class="catalog-item-price">
+                                        2 500 руб.
+                                    </p>
+                                </div>
+                            </a>
                         </li>
                         <li class="catalog-item">
-                            <h3>
-                                <a href="catalog-item.html">
-                                    Селфи-палка «Следуй за мной»
-                                </a>
-                            </h3>                        
-                                <a href="catalog-item-image">
-                                    <img src="img/follow-me.png" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-                                </a>                        
-                            <p class="catalog-item-price">
-                            4 900 руб.
-                            </p>
+                            <a href="#">                                                  
+                                <img src="img/selfie-hand.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+                                <div class="catalog-item-option">
+                                    <h3>
+                                        Селфи-палка «Следуй за мной»
+                                    </h3> 
+                                    <p class="catalog-item-price">
+                                        4 900 руб.
+                                    </p>
+                                </div>
+                            </a>
                         </li>
                     </ul>
                     <ul class="pagination-list">
@@ -252,21 +253,25 @@
                                 Назад
                             </a>
                         </li> 
-                        <li class="pagination-item pagination-item-current">
-                            <a href="#">
-                                1
-                            </a>
-                        </li>
-                        <li class="pagination-item">
-                            <a href="#">
-                                2
-                            </a>
-                        </li>
-                        <li class="pagination-item">
-                            <a href="#">
-                                3
-                            </a>
-                        </li>                         
+                        <li>
+                            <ul class="pagination-item-list">
+                                <li class="pagination-item">
+                                    <a href="#">
+                                        1
+                                    </a>
+                                </li>
+                                <li class="pagination-item">
+                                    <a href="#">
+                                        2
+                                    </a>
+                                </li>
+                                <li class="pagination-item">
+                                    <a href="#">
+                                        3
+                                    </a>
+                                </li>  
+                            </ul>   
+                        </li>                        
                         <li class="button catalog-item-button-next">
                             <a href="#">
                                 Вперед
@@ -281,7 +286,7 @@
             </main>
         </div>    
 
-        <footer class="main-footer">
+        <footer class="main-footer main-footer-catalog">
             <div class="wrapper">
                 <div class="footer-logo-address">
                     <a class="main-logo main-footer-logo">
