--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
                     <h2 class="visually-hidden">
                         Лучший товар
                     </h2>
+                    <div class="slider-controls">
+                        <label for="product-1">Первый</label>
+                        <label for="product-2">Второй</label>
+                        <label for="product-3">Третий</label>
+                    </div>
                     <div class="container-best-slider">
                         <a class="selfie-stick-slide">
                             <img src="img/selfie-branch.png" width="384" height="486" alt="Селфи-палка">
