Add pagination sliders of helper-list

--- a/index.html
+++ b/index.html
@@ -387,11 +387,13 @@
                         </li>     
                     </ul>
                 </section>
-
+        </div>
+        
+            <div class="container-help-list">
                 <section class="pagination-helper-slider">
                     <ul class="help-list">
-                        <li class="pagination-helper pagination-helper-current">
-                            <button class="button button-delivery">
+                        <li class="pagination-helper">
+                            <button class="button button-delivery button-helper-current">
                                 Доставка
                             </button>
                         </li>
@@ -406,7 +408,7 @@
                             </button>
                         </li>
                     </ul>    
-                    <div class="text">
+                    <div class="text text-delivery">
                         <h3>
                             Доставка
                         </h3>
@@ -416,7 +418,9 @@
                         </p>
                     </div>
                 </section>
+            </div>
 
+            <div class="wrapper">
                 <div class="logo-companies">
                     <a class="logo-item" href="#">
                         <img src="img/logo-dji-color.png" width="260" height="100" alt="Логотип DJI">
