Add submenu in catalog-page

--- a/catalog.html
+++ b/catalog.html
@@ -17,9 +17,47 @@
                     </a>
                     <ul class="header-page-navigation">
                         <li>
-                            <a href="catalog.html">
+                            <a class="catalog-button" href="catalog.html">
                                 Каталог товаров
                             </a>
+                            <div class="subcatalog">
+                                <ul>
+                                    <li>
+                                        <a>
+                                            Виртуальная реальность
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a>
+                                            Моноподы для селфи
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a>
+                                            Экшн-камеры
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul>
+                                    <li>
+                                        <a>
+                                            Фитнес браслеты
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a>
+                                            Умные часы
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul>
+                                    <li>
+                                        <a>
+                                            Квадрокоптеры
+                                        </a>
+                                    </li>                            
+                                </ul>
+                            </div>
                         </li>
                         <li>
                             <a href="delivery.html">
