--- a/catalog.html
+++ b/catalog.html
@@ -227,6 +227,23 @@
                                 </a>
                             </li>
                         </ul>
+                        <ul class="sort-arrow">
+                            <li class="sort-arrow-top">
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                                        <path fill="#231F20" d="M5.5 0L0 10h11z"/>
+                                    </svg>
+                                    
+                                </a>
+                            </li>
+                            <li class="sort-arrow-down">
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                                        <path fill="#231F20" d="M5.5 10L0 0h11"/>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                     <h2 class="visually-hidden">
                         Каталог селфи-палок
