Add invisible masks for items in catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -233,7 +233,6 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                                         <path fill="#231F20" d="M5.5 0L0 10h11z"/>
                                     </svg>
-                                    
                                 </a>
                             </li>
                             <li class="sort-arrow-down">
@@ -250,6 +249,14 @@
                     </h2>
                     <ul class="catalog-list">
                         <li class="catalog-item">
+                            <div class="mask-of-item">
+                                <a class="button button-basket" href="#">
+                                     В корзину
+                                </a>
+                                <button class="button-add">
+                                    Добавить к сравнению
+                                </button>
+                            </div>
                             <a href="#">                                
                                 <img src="img/follow-me.jpg" width="360" height="380" alt="Любительская селфи-палка">
                                 <div class="catalog-item-option">
@@ -263,6 +270,14 @@
                             </a>    
                         </li>
                         <li class="catalog-item">
+                            <div class="mask-of-item">
+                                <a class="button button-basket" href="#">
+                                     В корзину
+                                </a>
+                                <button class="button-add">
+                                    Добавить к сравнению
+                                </button>
+                            </div>
                             <a href="#">                                                    
                                 <img src="img/not-drowned-stick.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
                                 <div class="catalog-item-option">
@@ -276,6 +291,14 @@
                             </a>
                         </li>
                         <li class="catalog-item">
+                            <div class="mask-of-item">
+                                <a class="button button-basket" href="#">
+                                     В корзину
+                                </a>
+                                <button class="button-add">
+                                    Добавить к сравнению
+                                </button>
+                            </div>
                             <a href="#">                             
                                 <img src="img/professional-stick.jpg" width="360" height="380" alt="Непотопляемая селфи-палка"> 
                                 <div class="catalog-item-option">
@@ -289,6 +312,14 @@
                             </a>
                         </li>
                         <li class="catalog-item">
+                            <div class="mask-of-item">
+                                <a class="button button-basket" href="#">
+                                     В корзину
+                                </a>
+                                <button class="button-add">
+                                    Добавить к сравнению
+                                </button>
+                            </div>
                             <a href="#">                                                  
                                 <img src="img/selfie-hand.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
                                 <div class="catalog-item-option">
